Added session tracker for dynamic source links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,9 @@
     <% end %>
     
     <%= yield %>
+    
+    <% if session[:source] %>
+    <P> Thanks for visiting me from <%= session[:source] %> </P>
+    <% end %>
   </body>
 </html>
