Implemented content tag helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,6 @@
     
     <%= yield %>
     
-    <% if session[:source] %>
-    <P> Thanks for visiting me from <%= session[:source] %> </P>
-    <% end %>
+    <%= source_helper("application") %>
   </body>
 </html>
