--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -18,10 +18,8 @@
         
     <%= yield %>
     
-     <%= render "shared/nav", location: 'bottom' %>
+    <%= render "shared/nav", location: 'bottom' %>
     
-    <% if session[:source] %>
-    <P> Thanks for visiting me from <%= session[:source] %> </P>
-    <% end %>
+    <%= source_helper("blog") %>
   </body>
 </html>
