--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,19 @@
-<h1>Pages#contact</h1>
+<h1>Would you like to hire me </h1>
 
-<p><%= number_to_phone "5555555555" %> </p>
+<hr>
 
-<p><%= number_to_currency "18450" %> </p>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Phone</h3>
+    
+    <P><%= number_to_phone "8017099572" %></P>
+    
+    <h3>Email</H3>
+    
+    <p><a href="mailto:jayseanmchugh@hotmail.com?subject=PortfolioContact" "email me">Email me</a> </p>
+  </div>
 
-<p><%= number_with_delimiter "51654545564654" %> </p>
+ <div class="col-md-6">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.266494407495!2d-111.74162088423223!3d40.380785879369235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d86a220da9a35%3A0x623700267b5af9a5!2s1615+N+150+E%2C+Pleasant+Grove%2C+UT+84062!5e0!3m2!1sen!2sus!4v1499870208972" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+ </div>
+</div>
