--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -21,14 +21,13 @@
       <div class="container">
         <h1 class="blog-title">The Bootstrap Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog', new_blog_path  if logged_in?(:site_admin) %>
       </div>
     </div>
     
     <div class="container">
 
       <div class="row">
-    
-
         
     <%= yield %>
     
@@ -63,7 +62,9 @@
             </ol>
           </div>
         </div><!-- /.blog-sidebar -->
-        
+       
+      </div>
+       
         <footer class="blog-footer">
           <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
           <p>
@@ -72,10 +73,10 @@
         </footer>
 
     
-    <%= render "shared/nav", location: 'bottom' %>
+   
     
     <%= source_helper("blog") %>
-     </div>
+     
     </div>
   </body>
 </html>
