--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="container portfolio-form">
 <h1>Edit this  Portfolio Item</h1>
 
 <%= render 'from', portfolio_item: @portfolio_item %>
+</div>
