--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Create a new Portfolio Item</h1>
+<div class="container portfolio-form">
+  <h1>Create a new Portfolio Item</h1>
 
-<%= render 'from', portfolio_item: @portfolio_item %>
+  <%= render 'from', portfolio_item: @portfolio_item %>
+</div>
