Updated portfolio to include attr for position

--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -2,7 +2,7 @@
   <div class="inner">
     <h3 class="masthead-brand">Sean McHugh</h3>
     <nav class="nav nav-masthead app-nav">
-      <%= nav_helper 'nav_link', 'span' %>
+      <%= nav_helper 'nav-link', 'span' %>
       <%= login_helper 'nav-link' %>
     </nav>
   </div>
