Implemented initial file uploading system via carrierwave for portfolio items

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,7 +8,7 @@
   </div>
   
   <div class="col-md-8">
-    <p>Find me in app/views/pages/about.html.erb</p>
+    <p>Hi im a up and coming web devolper this is my frist website I have made with the help of the Code To Succes program hope you like it. </p>
   </div>
 </div>
 
