--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container portfolio-form">
+<div class="container portfolio-container">
 <h1>Edit this  Portfolio Item</h1>
 
 <%= render 'from', portfolio_item: @portfolio_item %>
