--- a/app/views/shared/_portfolio_masthead.html.erb
+++ b/app/views/shared/_portfolio_masthead.html.erb
@@ -1,7 +1,7 @@
 <section class="jumbotron text-center">
   <div class="container">
-    <h1 class="jumbotron-heading">My Portfolio</h1>
-    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+    <h1 class="jumbotron-heading">My Protfolios</h1>
+    <p class="lead text-muted">These are the other kind of jobs I have hade.</p>
     <p>
       <%= link_to 'Find Out More About Me', about_me_path, class: 'btn btn-primary' %>
       <%= link_to 'My Blogs', blogs_path, class: 'btn btn-secondary' %>
