--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -21,6 +21,8 @@
     <%= yield %>
     
      <%= render 'shared/portfolio_footer' %>
+     
+     <% alerts %>
     
     <%= source_helper("application") %>
   </body>
