--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -229,6 +229,23 @@ body {
     padding: 30px;
  }
  
+ .app-card-container{
+   color: black;
+   text-align: left;
+ }
+ 
+  .app-card-container > .card {
+    padding: 40px;
+  }
+  
+  .profile-img{
+    border: 1px solid grey;
+  }
+  
+  .app-card-container a{
+    color: blue;
+  }
+ 
  
  
  
