--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,17 @@
-<h1>About Me</h1>
+<div class= "app-card-container">
+  <div class="card">
+    <h1>About Me</h1>
 
 <hr>
 
 <div class="row">
   <div class="col-md-4">
-    <%= image_tag "Grim-Reaper.jpg", width: 300, alt: "profile image" %>
+    <%= image_tag "Grim-Reaper.jpg", width: 300, alt: "profile image", class: 'profile-img' %>
   </div>
   
   <div class="col-md-8">
     <p>Hi im a up and coming web devolper this is my frist website I have made with the help of the Code To Succes program hope you like it. </p>
+      </div>
+    </div>
   </div>
 </div>
-
